# Retain

./: .dockerignore  .env.development  .env.example  .env.production  .env.staging  .eslintrc.js  .gitignore  .prettierignore  README.md  docker-compose.apps.yml  docker-compose.yml  package.json  pnpm-lock.yaml  railway.toml  shopify.app.toml  tsconfig.base.json  turbo.json
.cursor/rules/: api-shopify.mdc  monorepo-stability.mdc  quality-gates.mdc  typescript.mdc
.github/workflows/: ci.yml
.husky/: pre-commit
apps/admin/: .env.example  Dockerfile  index.html  (+9 more)
apps/ai/: .env.example  Dockerfile  package.json  pyproject.toml  railway.toml  requirements.txt  start.sh
apps/ai/app/: main.py
apps/ai/src/: __init__.py  config.py  db.py  main.py  redis_client.py
apps/ai/src/features/: calculations.py  engineer.py
apps/ai/src/interventions/: __init__.py  channels.py  engine.py  selection.py  templates.py
apps/ai/src/jobs/: __init__.py  daily_features.py  daily_pipeline.py  train_model.py
apps/ai/src/models/: __init__.py  churn.py  predictor_service.py  registry.py  storage.py
apps/ai/tests/: conftest.py  test_churn_model.py  test_daily_features.py  test_feature_calculations.py  test_features_api.py  test_health.py  test_integration_api.py  test_intervention_engine.py  test_intervention_selection.py  test_predictor_service.py
e2e/: package.json  playwright.config.ts
factories/: contract.ts  customer.ts  factories.test.ts  index.ts  shop.ts
infra/: README.md  RUNBOOK.md
scripts/: deploy-shopify-production-urls.sh  shopify-local.md
seeds/: test-data.ts
(+290 files in other folders)
