[project]
name = "retain-ai"
version = "0.0.0"
description = "AI service for Retain: Revenue Multiplier"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "python-dotenv==1.0.1",
  "httpx==0.27.2",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
