[project]
name = "retain-ai"
version = "0.0.0"
description = "AI service for Retain: Revenue Multiplier"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "python-dotenv==1.0.1",
  "httpx==0.27.2",
  "asyncpg==0.30.0",
  "redis==5.2.1",
  "APScheduler==3.10.4",
  "pandas==2.2.3",
  "numpy==2.2.1",
  "scikit-learn==1.5.2",
  "xgboost==2.1.3",
  "joblib==1.4.2",
  "boto3==1.35.36",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests", "app"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 55
show_missing = true
